--- a/index.html
+++ b/index.html
@@ -7,7 +7,19 @@
     <title>Rock Paper Scissors</title>
   </head>
   <body>
-    <h2>Welcome to rock paper scissors game!</h2>
+    <div class="title">
+      <h2>Welcome to rock paper scissors game!</h2>
+    </div>
+    <div class="buttons">
+      <button id="rock">Rock</button>
+      <button id="paper">Paper</button>
+      <button id="scissors">Scissors</button>
+    </div>
+    <div class="scoreDisplay">
+      <h3>"Current Score: "</h3>
+      <h3 id="userScore">0</h3>
+      <h3 id="computerScore">0</h3>
+    </div>
   </body>
   <script src="main.js"></script>
 </html>
